.exe-ko dokumentazioa + -exe -a. Aldaketa txikiak-> partekatutako_datuak (duplikatzen zen) orain ez. Aplikazioaren 'responsive' obekuntza.